tests/baselines/reference/binaryIntegerLiteralError.errors.txt
tests/cases/conformance/es6/binaryAndOctalIntegerLiteral/binaryIntegerLiteralError.ts(2,17): error TS1005: ',' expected.
tests/cases/conformance/es6/binaryAndOctalIntegerLiteral/binaryIntegerLiteralError.ts(3,17): error TS1005: ',' expected.


==== tests/cases/conformance/es6/binaryAndOctalIntegerLiteral/binaryIntegerLiteralError.ts (2 errors) ====
    // error
    var bin1 = 0B1102110;
                    ~~~~
!!! error TS1005: ',' expected.
    var bin1 = 0b11023410;
                    ~~~~~
!!! error TS1005: ',' expected.
    
    var obj1 = {
        0b11010: "hi",
        26: "Hello",
        "26": "world",
    };
    